logo on workspace

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,8 +22,8 @@
                 <input type="file" name="logo" id="logo" class="sidebar__logo__input d-none" accept=".png, .jpg, .jpeg">
                 <img class="sidebar__logo__container d-block" src="#" alt="Your Logo">
                 <div class="sidebar__logo__container__panel position-absolute fixed-bottom invisible">
-                    <button class="bg-info text-white ">E</button>
-                    <button class="bg-danger text-white">D</button>
+                    <button class="bg-info text-white sidebar__logo__container__edit">E</button>
+                    <button class="bg-danger text-white sidebar__logo__container__delete">D</button>
                 </div>
             </div>
             <div class="sidebar__pictures pt-2">
@@ -37,7 +37,7 @@
         </aside>
         <section class="work-space col-10 pr-0">
             <div class="work-space__panel bg-secondary">
-                panel
+                <button class="my-2 mx-2 bg-dark text-white border-0 work-space__panel__clear">Clear Workspace</button>
             </div>
             <div class="work-space__sheet bg-info my-2">
                 <canvas class="workspace">
@@ -49,7 +49,7 @@
 
 <footer class="page-footer font-small blue fixed-bottom">
     <div class="footer-copyright text-center py-3 bg-secondary text-white">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/" class="text-white font-weight-bolder border-bottom">
+        <a href="https://github.com/WojciechLiana" class="text-white font-weight-bolder border-bottom">
             WojciechLiana.com</a>
     </div>
 </footer>
