workspace display adjustment

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,7 +39,9 @@
                 <button class="my-2 mx-2 bg-dark text-white border-0 work-space__panel__clear">Clear Workspace</button>
             </div>
             <div class="work-space__sheet bg-info my-2">
-                <canvas class="workspace">
+                <canvas class="workspace-image">
+                </canvas>
+                <canvas class="workspace-logo">
                 </canvas>
             </div>
         </section>
