app structure correction

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,13 +17,10 @@
 <main class="container-fluid py-3 px-4">
     <div class="row py-3 px-3 bg-dark">
         <aside class="sidebar col-2 py-3 bg-secondary">
-            <div class="sidebar__logo position-relative">
+            <div class="sidebar__logo">
                 <label for="logo" class="bg-dark p-2 text-white">Add logo</label>
                 <input type="file" name="logo" id="logo" class="sidebar__logo__input d-none" accept=".png, .jpg, .jpeg">
-                <img class="sidebar__logo__container d-block" src="#" alt="Your Logo">
-                <div class="sidebar__logo__container__panel position-absolute fixed-bottom invisible">
-                    <button class="bg-info text-white sidebar__logo__container__edit">E</button>
-                    <button class="bg-danger text-white sidebar__logo__container__delete">D</button>
+                <div class="sidebar__logo__container">
                 </div>
             </div>
             <div class="sidebar__pictures pt-2">
