--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,7 +39,7 @@
                     <input type="range" min="1" max="100" value="30" class="work-space__panel__slider-input text-danger">
                 </div>
             </div>
-            <div class="work-space__sheet bg-info my-2">
+            <div class="work-space__sheet position-relative bg-info my-2">
                 <div class="workspace-image">
                 </div>
                 <div class="workspace-logo">
