--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,6 +34,9 @@
         <section class="work-space col-10 pr-0">
             <div class="work-space__panel bg-secondary d-flex">
                 <button class="my-2 mx-2 bg-dark text-white border-0 work-space__panel__clear">Clear Workspace</button>
+                <a class="work-space__panel__save invisible" id="download" download="image.png">
+                    <button type="button" class="work-space__panel__save__button my-2 mx-2 bg-dark text-white border-0">Save Picture</button>
+                </a>
                 <div class="work-space__panel__slider my-2 invisible">
                     <span class="work-space__panel__slider-label text-white">Logo size:</span>
                     <input type="range" min="1" max="100" value="30" class="work-space__panel__slider-input text-danger">
