--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,43 +9,54 @@
 <header>
 
     <nav class="navbar navbar-dark bg-secondary navbar-expand-md">
-        <div class="text-white mr-auto ml-auto font-weight-bolder">Add a logo</div>
+        <div class="text-white mr-auto ml-auto font-weight-bolder">
+            Add a logo
+        </div>
     </nav>
 
 </header>
 
 <main class="container-fluid py-3 px-4">
     <div class="row py-3 px-3 bg-dark">
-        <aside class="sidebar col-2 py-3 bg-secondary">
+        <aside class="sidebar col-12 col-md-2 pt-3 pb-2 pb-md-3 mb-3 mb-md-0 bg-secondary">
             <div class="sidebar__logo">
-                <label for="logo" class="bg-dark p-2 text-white">Add logo</label>
+                <label for="logo" class="p-2 w-100 bg-dark text-white text-center">
+                    Add logo
+                </label>
                 <input type="file" name="logo" id="logo" class="sidebar__logo__input d-none" accept=".png, .jpg, .jpeg">
-                <div class="sidebar__logo__container">
+                <div class="sidebar__logo__container d-flex justify-content-center">
                 </div>
             </div>
             <div class="sidebar__pictures pt-2">
-                <label for="pictures" class="bg-dark p-2 text-white">Add pictures</label>
+                <label for="pictures" class="p-2 px-md-0 px-md-2 w-100 bg-dark text-white text-center text-break">
+                    Add pictures
+                </label>
                 <input type="file" name="pictures" id="pictures" class="sidebar__pictures__input d-none"
                        accept=".png, .jpg, .jpeg" multiple>
-                <div class="sidebar__pictures__container">
+                <div class="sidebar__pictures__container d-flex flex-wrap justify-content-center">
                 </div>
             </div>
         </aside>
-        <section class="work-space col-10 pr-0">
-            <div class="work-space__panel bg-secondary d-flex">
-                <button class="my-2 mx-2 bg-dark text-white border-0 work-space__panel__clear">Clear Workspace</button>
-                <a class="work-space__panel__save invisible" id="download" download="image.png">
-                    <button type="button" class="work-space__panel__save__button my-2 mx-2 bg-dark text-white border-0">Save Picture</button>
+        <section class="work-space col-12 col-md-10 pr-0 pl-0 pl-md-3">
+            <div class="work-space__panel bg-secondary d-flex flex-column flex-md-row">
+                <button class="work-space__panel__clear my-3 mx-3 mr-md-0 p-2 bg-dark text-white text-break border-0">
+                    Clear Workspace
+                </button>
+                <a class="work-space__panel__save my-0 my-md-3 mx-3 d-none" id="download" download="image.png">
+                    <button type="button"
+                            class="work-space__panel__save__button p-2 w-100 bg-dark text-white border-0">
+                        Save Picture
+                    </button>
                 </a>
-                <div class="work-space__panel__slider my-2 invisible">
-                    <span class="work-space__panel__slider-label text-white">Logo size:</span>
-                    <input type="range" min="1" max="100" value="30" class="work-space__panel__slider-input text-danger">
+                <div class="work-space__panel__slider py-3 mx-3 ml-0 d-none ">
+                    <input type="range" min="1" max="100" value="30"
+                           class="work-space__panel__slider-input text-danger">
                 </div>
             </div>
-            <div class="work-space__sheet position-relative bg-info my-2">
-                <div class="workspace-image">
+            <div class="work-space__sheet mt-3 position-relative bg-secondary">
+                <div class="workspace-image position-relative">
                 </div>
-                <div class="workspace-logo">
+                <div class="workspace-logo position-relative">
                 </div>
             </div>
         </section>
@@ -53,9 +64,11 @@
 </main>
 
 <footer class="page-footer font-small blue fixed-bottom">
-    <div class="footer-copyright text-center py-3 bg-secondary text-white">© 2020 Copyright:
-        <a href="https://github.com/WojciechLiana" class="text-white font-weight-bolder border-bottom">
-            WojciechLiana.com</a>
+    <div class="footer-copyright py-3 bg-secondary text-center text-white text-break">
+        © 2020 Copyright:
+        <a href="https://github.com/WojciechLiana" class="text-white font-weight-bolder text-break border-bottom">
+            WojciechLiana.com
+        </a>
     </div>
 </footer>
 
