--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
     <div class="row py-3 px-3 bg-dark">
         <aside class="sidebar col-12 col-md-2 pt-3 pb-2 pb-md-3 mb-3 mb-md-0 bg-secondary">
             <div class="sidebar__logo">
-                <label for="logo" class="p-2 w-100 bg-dark text-white text-center">
+                <label for="logo" class="sidebar__action-button p-2 w-100 bg-dark text-white text-center">
                     Add logo
                 </label>
                 <input type="file" name="logo" id="logo" class="sidebar__logo__input d-none" accept=".png, .jpg, .jpeg">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="sidebar__pictures pt-2">
-                <label for="pictures" class="p-2 px-md-0 px-md-2 w-100 bg-dark text-white text-center text-break">
+                <label for="pictures" class="sidebar__action-button p-2 px-md-0 px-md-2 w-100 bg-dark text-white text-center text-break">
                     Add pictures
                 </label>
                 <input type="file" name="pictures" id="pictures" class="sidebar__pictures__input d-none"
@@ -63,7 +63,7 @@
     </div>
 </main>
 
-<footer class="page-footer font-small blue fixed-bottom">
+<footer class="page-footer font-small blue ">
     <div class="footer-copyright py-3 bg-secondary text-center text-white text-break">
         © 2020 Copyright:
         <a href="https://github.com/WojciechLiana" class="text-white font-weight-bolder text-break border-bottom">
